Add CSS styles to HTML document

--- a/index.html
+++ b/index.html
@@ -17,27 +17,33 @@
         <label for="enter"></label>
     </section>
     <section class="container-right">
-      <article>
-        <h2 id="output-title-one"></h2>
-        <h3 id="output-url-one"></h3>
+      <article class="cards">
+        <h2 id="output-title-one">The Website Title</h2>
+        <br>
+        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a><br>
         <button>Read</button>
         <button>Delete</button>
       </article>
-      <article>
-        <h2 id="output-title-two"></h2>
-        <h3 id="output-url-two"></h3>
+      <article class="cards">
+        <h2 id="output-title-two">The Website Title</h2>
+        <br>
+        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a><br>
         <button>Read</button>
         <button>Delete</button>
       </article>
-      <article>
-        <h2 id="output-title-three"></h2>
-        <h3 id="output-url-three"></h3>
+      <article class="cards">
+        <h2 id="output-title-three">The Website Title</h2>
+        <br>
+        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
+        <br>
         <button>Read</button>
         <button>Delete</button>    
       </article>
-      <article>
-        <h2 id="output-title-four"></h2>
-        <h3 id="output-url-four"></h3>
+      <article class="cards">
+        <h2 id="output-title-four">The Website Title</h2>
+        <br>
+        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
+        <br>
         <button>Read</button>
         <button>Delete</button>     
       </article>
