Add CSS styling almost complete

--- a/index.html
+++ b/index.html
@@ -19,33 +19,35 @@
     <section class="container-right">
       <article class="cards">
         <h2 id="output-title-one">The Website Title</h2>
-        <br>
-        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a><br>
-        <button>Read</button>
-        <button>Delete</button>
+        <hr>
+        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
+        <hr>
+        <button class="read-button">Read</button>
+        <button class="delete-button">Delete</button>
       </article>
       <article class="cards">
         <h2 id="output-title-two">The Website Title</h2>
-        <br>
-        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a><br>
-        <button>Read</button>
-        <button>Delete</button>
+        <hr>
+        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
+        <hr>
+        <button class="read-button">Read</button>
+        <button class="delete-button">Delete</button>
       </article>
       <article class="cards">
         <h2 id="output-title-three">The Website Title</h2>
-        <br>
+        <hr>
         <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
-        <br>
-        <button>Read</button>
-        <button>Delete</button>    
+        <hr>
+        <button class="read-button">Read</button>
+        <button class="delete-button">Delete</button>    
       </article>
       <article class="cards">
         <h2 id="output-title-four">The Website Title</h2>
-        <br>
+        <hr>
         <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
-        <br>
-        <button>Read</button>
-        <button>Delete</button>     
+        <hr>
+        <button class="read-button">Read</button>
+        <button class="delete-button">Delete</button>     
       </article>
     </section>
   </main>
