--- a/index.html
+++ b/index.html
@@ -8,46 +8,47 @@
 <body>
   <main>
     <section class="container-left">
-      <header><h1>Linked<span><img src="linked-list-logo.svg"></span> List</h1></header>
-        <input type="text" name="Title" placeholder="Website Title" class="main-input">
-        <label for="Title"></label>
-        <input type="text" name="Website URL" placeholder="Website URL" class="main-input">
-        <label for="website URL"></label>
+      <header><h1>Linked<span><img src="linked-list-logo.svg"></span> List</h1></header><form action="get" class="main-form" id="main-form-input">
+          <input type="text" name="Title" placeholder="Website Title" class="main-input" id="title-input">
+          <label for="Title"></label>
+          <input type="text" name="Website URL" placeholder="Website URL" class="main-input" id="url-input">
+          <label for="website URL"></label>
+        </form>
         <button id="enter" class="enter-buttons">Enter</button>
         <label for="enter"></label>
     </section>
     <section class="container-right">
       <article class="cards">
-        <h2 id="output-title-one">The Website Title</h2>
+        <h2 class="output-title" id="output-title-one">The Website Title</h2>
         <hr>
-        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
+        <a href="www.thewebsiteurl.com" class="output-url">www.thewebsiteurl.com</a>
         <hr>
-        <button class="read-button">Read</button>
-        <button class="delete-button">Delete</button>
+        <button class="bookmarks-button" id="read-button">Read</button>
+        <button class="bookmarks-button" id="delete-button">Delete</button>
       </article>
       <article class="cards">
         <h2 id="output-title-two">The Website Title</h2>
         <hr>
         <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
         <hr>
-        <button class="read-button">Read</button>
-        <button class="delete-button">Delete</button>
+        <button class="bookmarks-button" id="read-button">Read</button>
+        <button class="bookmarks-button" id="delete-button">Delete</button>
       </article>
       <article class="cards">
         <h2 id="output-title-three">The Website Title</h2>
         <hr>
         <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
         <hr>
-        <button class="read-button">Read</button>
-        <button class="delete-button">Delete</button>    
+        <button class="bookmarks-button" id="read-button">Read</button>
+        <button class="bookmarks-button" id="delete-button">Delete</button>    
       </article>
       <article class="cards">
         <h2 id="output-title-four">The Website Title</h2>
         <hr>
         <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
         <hr>
-        <button class="read-button">Read</button>
-        <button class="delete-button">Delete</button>     
+        <button class="bookmarks-button" id="read-button">Read</button>
+        <button class="bookmarks-button" id="delete-button">Delete</button>     
       </article>
     </section>
   </main>
