--- a/index.html
+++ b/index.html
@@ -23,23 +23,16 @@
         <hr>
         <a href="www.thewebsiteurl.com" class="output-url">www.thewebsiteurl.com</a>
         <hr>
-        <button class="bookmarks-button" id="read-button">Read</button>
+        <button class="bookmarks-button" class="colorred" id="read-button">Read</button>
         <button class="bookmarks-button" id="delete-button">Delete</button>
       </article>
-      <article class="cards">
-        <h2 id="output-title-two">The Website Title</h2>
-        <hr>
-        <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
-        <hr>
-        <button class="bookmarks-button" id="read-button">Read</button>
-        <button class="bookmarks-button" id="delete-button">Delete</button>
-      </article>
+
       <article class="cards">
         <h2 id="output-title-three">The Website Title</h2>
         <hr>
         <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
         <hr>
-        <button class="bookmarks-button" id="read-button">Read</button>
+        <button class="bookmarks-button" class="colorred" id="read-button">Read</button>
         <button class="bookmarks-button" id="delete-button">Delete</button>    
       </article>
       <article class="cards">
@@ -47,11 +40,12 @@
         <hr>
         <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
         <hr>
-        <button class="bookmarks-button" id="read-button">Read</button>
+        <button class="bookmarks-button" class="colorred" id="read-button">Read</button>
         <button class="bookmarks-button" id="delete-button">Delete</button>     
       </article>
     </section>
   </main>
-<script type="text/javascript" src="script.js"></script>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
