Add jQuery functions

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
         <label for="enter"></label>
     </section>
     <section class="container-right">
-      <article class="cards">
+      <!-- <article class="cards">
         <h2 class="output-title" id="output-title-one">The Website Title</h2>
         <hr>
         <a href="www.thewebsiteurl.com" class="output-url">www.thewebsiteurl.com</a>
         <hr>
-        <button class="bookmarks-button" class="colorred" id="read-button">Read</button>
+        <button class="bookmarks-button" id="read-button">Read</button>
         <button class="bookmarks-button" id="delete-button">Delete</button>
       </article>
-
-      <article class="cards">
+ -->
+<!--       <article class="cards">
         <h2 id="output-title-three">The Website Title</h2>
         <hr>
         <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
@@ -41,8 +41,8 @@
         <a href="www.thewebsiteurl.com">www.thewebsiteurl.com</a>
         <hr>
         <button class="bookmarks-button" class="colorred" id="read-button">Read</button>
-        <button class="bookmarks-button" id="delete-button">Delete</button>     
-      </article>
+        <button class="bookmarks-button" id="delete-button">Delete</button> -->     
+     <!--  </article> -->
     </section>
   </main>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
