Functioning counter when added or deleted cards

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </form>
         <button id="enter" class="enter-buttons">Enter</button>
         <label for="enter"></label>
+        <p class="card-counter">this is my card counter</p>
     </section>
     <section class="container-right">
     </section>
