Add tweaks to CSS

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
           <input type="text" name="Website URL" placeholder="Website URL" class="main-input" id="url-input">
           <label for="website URL"></label>
         </form>
+        <p class="card-counter">1</p>
         <button id="enter" class="enter-buttons">Enter</button>
         <label for="enter"></label>
-        <p class="card-counter">this is my card counter</p>
+        
     </section>
     <section class="container-right">
     </section>
