Add fix for input field disable, adjusted CSS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <label for="website URL"></label>
         </form>
         <p class="card-counter">1</p>
-        <button id="enter" class="enter-buttons">Enter</button>
+        <button id="enter" class="enter-buttons" disabled>Enter</button>
         <label for="enter"></label>
         
     </section>
