Add unread counter not functioning

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Linked List</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
@@ -14,7 +15,9 @@
           <input type="text" name="Website URL" placeholder="Website URL" class="main-input" id="url-input">
           <label for="website URL"></label>
         </form>
-        <p class="card-counter">1</p>
+        
+        <p class="card-counter"></p><p class="read-links"></p><p class="unread-links"></p>
+
         <button id="enter" class="enter-buttons" disabled>Enter</button>
         <label for="enter"></label>
         
